# MiniFlightRadar

./: CarbonEmissions.py  DataBase.py  Interface.py  LICENSE.md  Pdf_generateur.py  README.md  callsign.csv  main.py  opensky_api.py  requirements.txt  setup.cfg  telechargementBaseDonnee.py  test.md
BaseDonnees/: aircraft_parameters.csv  callsign.csv
BaseDonnees/EASA/: easaEmission.csv
FlightRadar/: __init__.py
FlightRadar/CO2calculator/: CarbonEmissions.py
FlightRadar/DataBase/: DataBase.py  opensky_api.py  telechargementBaseDonnee.py
FlightRadar/Interface/: Interface.py
FlightRadar/PDFgenerator/: Pdf_generateur.py
html/: CarbonEmissions.html  DataBase.html  DataBase1.html  Interface.html  Pdf_generateur.html  genindex.html  index.html  main.html  modules.html  objects.inv  opensky_api.html  py-modindex.html  search.html  searchindex.js  telechargementBaseDonnee.html
html/_sources/: CarbonEmissions.rst.txt  DataBase.rst.txt  DataBase1.rst.txt  Interface.rst.txt  Pdf_generateur.rst.txt  index.rst.txt  modules.rst.txt  opensky_api.rst.txt  telechargementBaseDonnee.rst.txt
