[metadata]
name = FlightRadar
version = 1.0
author = Martin Grangé, Emilio Scottu, Lou-Anne Villette
description = Flight radar with a CO2 emissions calculator
long_description = User interface allowing you to enter the ICAO code of an airport as well as a time slot (date,
initial time, final time) and display flights departing or arriving at this airport in this time slot. Selecting a
flight displays flight data and a comparison of CO2 emissions for similar engines and aircraft models. This information
can be saved in a pdf file.
url = https://github.com/MartinGrG/MiniFlightRadar
keywords = flight, radar, CO2, emissions

[options]
python_requires = >=3.12
install_requires =
pandas~=2.2.2
customtkinter~=5.2.2
pillow~=10.3.0
requests~=2.31.0
tkintermapview~=1.29
future~=1.0.0
certifi~=2024.6.2
openpyxl
fpdf2
matplotlib
numpy